Bug 1120566 - Adjust points sent from APZ to Gecko for the 'scale-to-resolution' transform in APZCCallbackHelper::ApplyCallbackTransform. r=kats